--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./assets/style.css" />
     <link
       rel="icon"
       type="image/png"
-      href="./image/dek5r4f-2a6c12b8-588e-4224-b723-62d328f3a77c.png"
+      href="./assets/images/dek5r4f-2a6c12b8-588e-4224-b723-62d328f3a77c.png"
     />
-    <title>Struttura Discord</title>
+    <title>Discord</title>
   </head>
   <body>
     <!-- header    -->
