--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
     <header class="bg">
       <div class="flex-container debug">
         <div class="space1">logo</div>
-        <div class="space2">link link link link link</div>
+        <div class="space2">
+            <a href="https://google.com">Scarica</a>
+            <a href="https://google.com">Perchè Discord</a>
+            <a href="https://google.com">Nitro</a>
+            <a href="https://google.com">Sicurezza</a>
+            <a href="https://google.com">Assistenza</a>
+        </div>
         <div class="space3">login</div>
       </div>
     </header>
