--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- header    -->
     <header class="bg">
       <div class="flex-container debug">
-        <div class="space1">logo</div>
+        <div class="space1"><img src="./assets/images/logo.svg" alt=""></div>
         <div class="space2">
             <a href="https://google.com">Scarica</a>
             <a href="https://google.com">Perchè Discord</a>
@@ -23,7 +23,9 @@
             <a href="https://google.com">Sicurezza</a>
             <a href="https://google.com">Assistenza</a>
         </div>
-        <div class="space3">login</div>
+        <div class="space3">
+            <button class="bt-access">Accedi</button>
+        </div>
       </div>
     </header>
 
