end first section

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
     <!-- header    -->
     <header class="bg">
       <div class="flex-container debug">
-        <div class="space1"><img src="./assets/images/logo.svg" alt=""></div>
+        <div class="space1"><img src="./assets/images/logo.svg" alt="" /></div>
         <div class="space2">
-            <a href="https://google.com">Scarica</a>
-            <a href="https://google.com">Perchè Discord</a>
-            <a href="https://google.com">Nitro</a>
-            <a href="https://google.com">Sicurezza</a>
-            <a href="https://google.com">Assistenza</a>
+          <a href="https://google.com">Scarica</a>
+          <a href="https://google.com">Perchè Discord</a>
+          <a href="https://google.com">Nitro</a>
+          <a href="https://google.com">Sicurezza</a>
+          <a href="https://google.com">Assistenza</a>
         </div>
         <div class="space3">
-            <button class="bt-access">Accedi</button>
+          <button class="bt-access">Accedi</button>
         </div>
       </div>
     </header>
@@ -32,8 +32,17 @@
     <!-- main -->
     <main>
       <section class="first">
-        <div class="flex-container debug bg-1">
-          <div class="rectangle"></div>
+        <div class="flex-container bg-1">
+          <div class="rectangle">
+            <h1>Il tuo posto per parlare</h1>
+            <p>
+              Discord è fantastico per giocare e rilassarsi con gli amici, o
+              anche per costruire una comunità mondiale. Personalizza il tuo
+              spazio per parlare, giocare e passare il tempo.
+            </p>
+            <button class="bt-1">Download per Mac</button>
+            <button class="bt-2">Apri Discord nel tuo browser</button>
+          </div>
         </div>
       </section>
 
