end second section

--- a/index.html
+++ b/index.html
@@ -47,29 +47,36 @@
       </section>
 
       <section class="second">
-        <div class="flex-container debug bg-2">
-          <div class="rectangle2"></div>
-          <div class="rectangle3"></div>
+        <div class="flex-container bg-2">
+          <div class="rectangle2">
+            <img src="./assets/images/item1.svg" alt="">
+          </div>
+          <div class="rectangle3">
+            <h1 class="move-r">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+            <p class="move-r">
+              I server Discord sono organizzati in canali telematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="third">
         <div class="flex-container1 debug bg-3">
-          <div class="rectangle2"></div>
-          <div class="rectangle3"></div>
+          <div class="rectangle4"></div>
+          <div class="rectangle5"></div>
         </div>
       </section>
 
       <section class="fourth">
         <div class="flex-container debug bg-4">
-          <div class="rectangle2"></div>
-          <div class="rectangle3"></div>
+          <div class="rectangle6"></div>
+          <div class="rectangle7"></div>
         </div>
       </section>
 
       <section class="fifth">
         <div class="flex-container debug bg-5">
-          <div class="rectangle4"></div>
+          <div class="rectangle8"></div>
         </div>
       </section>
     </main>
