end third section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <!-- header    -->
     <header class="bg">
-      <div class="flex-container debug">
+      <div class="flex-container">
         <div class="space1"><img src="./assets/images/logo.svg" alt="" /></div>
         <div class="space2">
           <a href="https://google.com">Scarica</a>
@@ -61,21 +61,28 @@
       </section>
 
       <section class="third">
-        <div class="flex-container1 debug bg-3">
-          <div class="rectangle4"></div>
-          <div class="rectangle5"></div>
+        <div class="flex-container1 bg-3">
+          <div class="rectangle4">
+            <img src="./assets/images/item2.svg" alt="">
+          </div>
+          <div class="rectangle5">
+            <h1 class="move-l">Dove trovarsi è facile</h1>
+            <p class="move-l">
+              Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="fourth">
-        <div class="flex-container debug bg-4">
+        <div class="flex-container bg-4">
           <div class="rectangle6"></div>
           <div class="rectangle7"></div>
         </div>
       </section>
 
       <section class="fifth">
-        <div class="flex-container debug bg-5">
+        <div class="flex-container bg-5">
           <div class="rectangle8"></div>
         </div>
       </section>
