end fourth section

--- a/index.html
+++ b/index.html
@@ -76,8 +76,15 @@
 
       <section class="fourth">
         <div class="flex-container bg-4">
-          <div class="rectangle6"></div>
-          <div class="rectangle7"></div>
+          <div class="rectangle6">
+            <img src="./assets/images/item3.svg" alt="">
+          </div>
+          <div class="rectangle7">
+            <h1 class="move-r7">Da pochi a un fandom</h1>
+            <p class="move-r7">
+              Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.
+            </p>
+          </div>
         </div>
       </section>
 
