--- a/index.html
+++ b/index.html
@@ -49,12 +49,16 @@
       <section class="second">
         <div class="flex-container bg-2">
           <div class="rectangle2">
-            <img src="./assets/images/item1.svg" alt="">
+            <img src="./assets/images/item1.svg" alt="" />
           </div>
           <div class="rectangle3">
-            <h1 class="move-r">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+            <h1 class="move-r">
+              Un luogo a invito con tutto lo spazio necessario per parlare
+            </h1>
             <p class="move-r">
-              I server Discord sono organizzati in canali telematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+              I server Discord sono organizzati in canali telematici in cui puoi
+              collaborare, condividere o semplicemente parlare della tua
+              giornata senza intasare una chat di gruppo.
             </p>
           </div>
         </div>
@@ -63,12 +67,14 @@
       <section class="third">
         <div class="flex-container1 bg-3">
           <div class="rectangle4">
-            <img src="./assets/images/item2.svg" alt="">
+            <img src="./assets/images/item2.svg" alt="" />
           </div>
           <div class="rectangle5">
             <h1 class="move-l">Dove trovarsi è facile</h1>
             <p class="move-l">
-              Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.
+              Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel
+              tuo server possono vedere che sei lì e unirsi istantaneamente
+              senza dover chiamare.
             </p>
           </div>
         </div>
@@ -77,12 +83,14 @@
       <section class="fourth">
         <div class="flex-container bg-4">
           <div class="rectangle6">
-            <img src="./assets/images/item3.svg" alt="">
+            <img src="./assets/images/item3.svg" alt="" />
           </div>
           <div class="rectangle7">
             <h1 class="move-r7">Da pochi a un fandom</h1>
             <p class="move-r7">
-              Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati e molto altro.
+              Dai inizio a una community di qualsiasi dimensione con strumenti
+              di moderazione e accesso ai membri personalizzabile. Concedi ai
+              membri poteri speciali, crea canali privati e molto altro.
             </p>
           </div>
         </div>
@@ -90,10 +98,26 @@
 
       <section class="fifth">
         <div class="flex-container bg-5">
-          <div class="rectangle8"></div>
+          <div class="rectangle8">
+            <h1>
+              Tecnologia affidabile per tenersi in contatto
+            </h1>
+            <p>
+              Video e audio a bassa latenza ti faranno sentire come se foste
+              tutti nella stessa stanza. Fai ciao in video, guarda gli amici
+              giocare in streaming o riunitevi in una sessione di disegno con la
+              condivisione schermo.
+            </p>
+            <img class="img-5" src="./assets/images/item4-big.svg" alt="" />
+            <img class="stars" src="./assets/images/stars.svg" alt="">
+            <h2>Pronto ad iniziare la tua avventura?</h2>
+            <button class="bt-3">Download per Mac</button>
+          </div>
         </div>
       </section>
     </main>
+              
+            
 
     <!-- footer -->
     <footer class="bg-f">
