--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
       href="./assets/images/dek5r4f-2a6c12b8-588e-4224-b723-62d328f3a77c.png"
     />
     <title>Discord</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
   <body>
     <!-- header    -->
@@ -18,11 +21,11 @@
       <div class="flex-container">
         <div class="space1"><img src="./assets/images/logo.svg" alt="" /></div>
         <div class="space2">
-          <a href="https://google.com">Scarica</a>
-          <a href="https://google.com">Perchè Discord</a>
-          <a href="https://google.com">Nitro</a>
-          <a href="https://google.com">Sicurezza</a>
-          <a href="https://google.com">Assistenza</a>
+          <a class="link-h" href="https://google.com">Scarica</a>
+          <a class="link-h" href="https://google.com">Perchè Discord</a>
+          <a class="link-h" href="https://google.com">Nitro</a>
+          <a class="link-h" href="https://google.com">Sicurezza</a>
+          <a class="link-h" href="https://google.com">Assistenza</a>
         </div>
         <div class="space3">
           <button class="bt-access">Accedi</button>
@@ -100,9 +103,7 @@
       <section class="fifth">
         <div class="flex-container bg-5">
           <div class="rectangle8">
-            <h1>
-              Tecnologia affidabile per tenersi in contatto
-            </h1>
+            <h1>Tecnologia affidabile per tenersi in contatto</h1>
             <p>
               Video e audio a bassa latenza ti faranno sentire come se foste
               tutti nella stessa stanza. Fai ciao in video, guarda gli amici
@@ -110,32 +111,76 @@
               condivisione schermo.
             </p>
             <img class="img-5" src="./assets/images/item4-big.svg" alt="" />
-            <img class="stars" src="./assets/images/stars.svg" alt="">
+            <img class="stars" src="./assets/images/stars.svg" alt="" />
             <h2>Pronto ad iniziare la tua avventura?</h2>
             <button class="bt-3">Download per Mac</button>
           </div>
         </div>
       </section>
     </main>
-    
+
     <footer class="bg-f">
       <section class="footer-top">
-        <div class="flex-container debug">
+        <div class="flex-container">
           <div class="first-d">
-            <h2 class="title-f">Il tuo posto per <br>parlare</h2>
-            <img class="img-ita" src="./assets/images/ita.png" alt=""><span>Italiano<i class="fa fa-chevron-down" style="font-size: 8px; text-align: center;
-            vertical-align: middle; margin-left: 4px;"></i></span>
+            <h2 class="title-f">Il tuo posto per <br />parlare</h2>
+            <img class="img-ita" src="./assets/images/ita.png" alt="" /><span
+              >Italiano<i
+                class="fa fa-chevron-down"
+                style="
+                  font-size: 8px;
+                  text-align: center;
+                  vertical-align: middle;
+                  margin-left: 4px;
+                "
+              ></i
+            ></span>
             <div>
-              <img class="fb" src="./assets/images/F.png" alt="">
-              <img class="insta" src="./assets/images/Insta.png" alt="">
-              <img class="x" src="./assets/images/X.png" alt="">
-              <img class="yt" src="./assets/images/Yt.png" alt="">
+              <img class="fb" src="./assets/images/F.png" alt="" />
+              <img class="insta" src="./assets/images/Insta.png" alt="" />
+              <img class="x" src="./assets/images/X.png" alt="" />
+              <img class="yt" src="./assets/images/Yt.png" alt="" />
             </div>
           </div>
-          <div class="second-d">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Optio perferendis est cupiditate dignissimos repellat voluptatibus maiores accusamus aliquid id soluta?</div>
-          <div class="second-d">Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates repellat doloribus maxime unde! Optio ipsam corrupti nisi, delectus asperiores earum!</div>
-          <div class="second-d">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quisquam, dolores itaque iste eligendi sint incidunt at debitis asperiores excepturi. Necessitatibus.</div>
-          <div class="second-d">Lorem ipsum dolor sit amet consectetur adipisicing elit. A dolor porro omnis eius consequatur ullam rem quo aliquam non praesentium.</div>
+          <div class="second-d flex-container2">
+            <h4>Prodotto</h4>
+            <a href="https://google.com" class="sotto-m">Scarica</a>
+            <a href="https://google.com" class="sotto-m">Perchè Discord</a>
+            <a href="https://google.com" class="sotto-m">Nitro</a>
+            <a href="https://google.com" class="sotto-m">Sicurezza</a>
+            <a href="https://google.com" class="sotto-m">Assistenza</a>
+          </div>
+
+          <div class="second-d flex-container2">
+            <h4>Compagnia</h4>
+            <a href="https://google.com" class="sotto-m">Chi siamo</a>
+            <a href="https://google.com" class="sotto-m">Lavora con noi</a>
+            <a href="https://google.com" class="sotto-m">Marchio</a>
+            <a href="https://google.com" class="sotto-m">Redazione</a>
+            <a href="https://google.com" class="sotto-m">Negozio</a>
+          </div>
+          <div class="second-d flex-container2">
+            <h4>Risorse</h4>
+            <a href="https://google.com" class="sotto-m">Scarica</a>
+            <a href="https://google.com" class="sotto-m">Perchè Discord</a>
+            <a href="https://google.com" class="sotto-m">Nitro</a>
+            <a href="https://google.com" class="sotto-m">Sicurezza</a>
+            <a href="https://google.com" class="sotto-m">Assistenza</a>
+            <a href="https://google.com" class="sotto-m">Scarica</a>
+            <a href="https://google.com" class="sotto-m">Perchè Discord</a>
+            <a href="https://google.com" class="sotto-m">Nitro</a>
+            <a href="https://google.com" class="sotto-m">Sicurezza</a>
+            <a href="https://google.com" class="sotto-m">Assistenza</a>
+            <a href="https://google.com" class="sotto-m">Scarica</a>
+          </div>
+          <div class="second-d flex-container2">
+            <h4>Norme</h4>
+            <a href="https://google.com" class="sotto-m">Scarica</a>
+            <a href="https://google.com" class="sotto-m">Perchè Discord</a>
+            <a href="https://google.com" class="sotto-m">Nitro</a>
+            <a href="https://google.com" class="sotto-m">Sicurezza</a>
+            <a href="https://google.com" class="sotto-m">Assistenza</a>
+          </div>
         </div>
       </section>
 
@@ -143,15 +188,16 @@
 
       <section class="footer-bottom">
         <div class="flex-container">
-          <div class="flex-container2 bg-fb">
-            <label class="logo-f">Logo</label>
-            <button class="bottone-f">Bottone</button>
+          <div class="flex-container3 bg-fb">
+            <div>
+              <img class="space4" src="./assets/images/logo.svg" alt="" />
+            </div>
+            <button class="bottone-f">Registrati</button>
           </div>
         </div>
       </section>
     </footer>
   </body>
 </html>
-            
 
-    <!-- footer -->
+<!-- footer -->
