--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
       <section class="fifth">
         <div class="flex-container bg-5">
           <div class="rectangle8">
-            <h1>Tecnologia affidabile per tenersi in contatto</h1>
+            <h1 class="tecnology">Tecnologia affidabile per tenersi in contatto</h1>
             <p>
               Video e audio a bassa latenza ti faranno sentire come se foste
               tutti nella stessa stanza. Fai ciao in video, guarda gli amici
@@ -132,8 +132,7 @@
                   text-align: center;
                   vertical-align: middle;
                   margin-left: 4px;
-                "
-              ></i
+                  "></i
             ></span>
             <div>
               <img class="fb" src="./assets/images/F.png" alt="" />
@@ -150,7 +149,6 @@
             <a href="https://google.com" class="sotto-m">Sicurezza</a>
             <a href="https://google.com" class="sotto-m">Assistenza</a>
           </div>
-
           <div class="second-d flex-container2">
             <h4>Compagnia</h4>
             <a href="https://google.com" class="sotto-m">Chi siamo</a>
@@ -183,9 +181,7 @@
           </div>
         </div>
       </section>
-
       <hr class="color-w" />
-
       <section class="footer-bottom">
         <div class="flex-container">
           <div class="flex-container3 bg-fb">
@@ -199,5 +195,3 @@
     </footer>
   </body>
 </html>
-
-<!-- footer -->
